Versión Tablet y Télefono
Agregue las versiones de tablet y teléfono

--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
                 <li class="menu__list__item"><a href="#hobbies"><p>Hobbies</p></a></li>
                 <li class="menu__list__item"><a href="#formacion"><p>Formación</p></a></li>
                 <li class="menu__list__item"><a href="#xp"><p>Proyectos</p></a></li>
-                <li class="menu__list__item"><a href="#contacto"><p>sakatadshiro@gmail.com</p></a></li>
+            </ul>
+            <ul class="menu__list__2">
+            <li class="menu__list__item" id="contacto"><a href="#contacto"><p>sakatadshiro@gmail.com</p></a></li>
             </ul>
         </nav>
     </section>
