Arreglo y actualización del portafolio
Añadí el fokus

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             <div class="academic__courses__box">
                 <ul class="academic__courses__list">
                     <!-- Pon el logotipo de la institución de formación -->
-                    <li class="academic__courses__item__img"><img class="academic_img" src="assets\udemy_logo.png"></li>
+                    <li class="academic__courses__item__img"><img class="academic_img" src="./assets/udemy_logo.png"></li>
                     <li class="academic__courses__item__title"><h4>Aprende Unreal Engine 5 de 0 a Dios</h4></li>
                     <li class="academic__courses__item__subtitle"><p>2023 - Udemy</p></li>
                 </ul>
@@ -146,7 +146,7 @@
             <div class="academic__courses__box">
                 <ul class="academic__courses__list">
                     <!--Pon el logotipo de la institución de formación -->
-                    <li class="academic__courses__item__img"><img class="academic_img" src="assets\udemy_logo.png"></li>
+                    <li class="academic__courses__item__img"><img class="academic_img" src="./assets/udemy_logo.png"></li>
                     <li class="academic__courses__item__title"><h4>Programar Blueprints en Unreal Engine de 0 a Profesional</h4></li>
                     <li class="academic__courses__item__subtitle"><p>2023 - Udemy</p></li>
                 </ul>
@@ -155,7 +155,7 @@
             <div class="academic__courses__box">
                 <ul class="academic__courses__list">
                     <!-- Pon el logotipo de la institución de formación -->
-                    <li class="academic__courses__item__img"><img class="academic_img" src="assets\alura_logo_tr.png"></li>
+                    <li class="academic__courses__item__img"><img class="academic_img" src="./assets/alura_logo_tr.png"></li>
                     <li class="academic__courses__item__title"><h4>Formación Lógica de Programación con JavaScript</h4></li>
                     <li class="academic__courses__item__subtitle"><p> 2024 - Alura</p></li>
                 </ul>
@@ -163,7 +163,7 @@
             <div class="academic__courses__box">
                 <ul class="academic__courses__list">
                     <!-- Pon el logotipo de la institución de formación -->
-                    <li class="academic__courses__item__img"><img class="academic_img" src="assets\alura_logo_tr.png"></li>
+                    <li class="academic__courses__item__img"><img class="academic_img" src="./assets/alura_logo_tr.png"></li>
                     <li class="academic__courses__item__title"><h4>Formación Principiante en Programación G6 - ONE</h4></li>
                     <li class="academic__courses__item__subtitle"><p>2024 - Alura</p></li>
                 </ul>
@@ -172,7 +172,7 @@
             <div class="academic__courses__box">
                 <ul class="academic__courses__list">
                     <!-- Pon el logotipo de la institución de formación -->
-                    <li class="academic__courses__item__img"><img class="academic_img" src="assets\alura_logo_tr.png"></li>
+                    <li class="academic__courses__item__img"><img class="academic_img" src="./assets/alura_logo_tr.png"></li>
                     <li class="academic__courses__item__title"><h4>Curso de HTML, CSS y Javascript</h4></li>
                     <li class="academic__courses__item__subtitle"><p>En curso - Alura</p></li>
                 </ul>
@@ -184,9 +184,8 @@
     <section class="experience" id="xp">
         <h2 class="experience__section__title" >Experiencia Profesional</h2>
         <div class="experiencie__box">
-
             <!-- Pon el logotipo/captura de pantalla de tu proyecto -->
-            <img class="experience__img" src="assets\adivina_juego.png">
+            <img class="experience__img" src="./assets/adivina_juego.png">
             <div class="experience__info"
                 <h2 class="experience__title">Adivina el número</h2>
                 <h3 class="experience__text">Alura</h3>
@@ -195,11 +194,11 @@
                         <span class="experience__repo"><a href="https://sakatadshiro.github.io/adivinaelnumero/"><button class="experiencia__boton_repo"><p>Ir al repositorio</p></button></a></span>
                 </div>
             </div>
-        </div>  
+        </div>
 
         <div class="experiencie__box">
             <!-- Pon el logotipo/captura de pantalla de tu proyecto -->
-            <img class="experience__img" src="assets\aluraplay.png">
+            <img class="experience__img" src="./assets/aluraplay.png">
             <div class="experience__info"
                 <h2 class="experience__title">AluraPlay (Una página)</h2>
                 <h3 class="experience__text">Alura </h3>
@@ -208,10 +207,11 @@
                         <span class="experience__repo"><a href="https://sakatadshiro.github.io/aluraplay/#"><button class="experiencia__boton_repo"><p>Ir al repositorio</p></button></a></span>
                 </div>
             </div>
+        </div>
 
         <div class="experiencie__box">
             <!-- Pon el logotipo/captura de pantalla de tu proyecto -->
-            <img class="experience__img" src="assets\aluramidi.png">
+            <img class="experience__img" src="./assets/aluramidi.png">
             <div class="experience__info"
                 <h2 class="experience__title">AluraMidi</h2>
                 <h3 class="experience__text">Alura </h3>
@@ -220,8 +220,22 @@
                         <span class="experience__repo"><a href="https://sakatadshiro.github.io/cajadesonidos/"><button class="experiencia__boton_repo"><p>Ir al repositorio</p></button></a></span>
                 </div>
             </div>
+        </div>
 
-        </div>  
+        <div class="experiencie__box">
+            <!-- Pon el logotipo/captura de pantalla de tu proyecto -->
+            <img class="experience__img" src="./assets/fokus.png">
+            <div class="experience__info"
+                <h2 class="experience__title">AluraMidi</h2>
+                <h3 class="experience__text">Alura </h3>
+                <div class="experience__description">
+                        <!-- Pon el enlace del proyecto en Github o GithubPages -->
+                        <span class="experience__repo"><a href="https://sakatadshiro.github.io/fokus/"><button class="experiencia__boton_repo"><p>Ir al repositorio</p></button></a></span>
+                </div>    
+            
+            </div>  
+        </div>
+    </section>
 
         <!-- Sección de Contacto -->
         <section class="formcontato" id="contacto">
