--- a/index.html
+++ b/index.html
@@ -226,11 +226,25 @@
             <!-- Pon el logotipo/captura de pantalla de tu proyecto -->
             <img class="experience__img" src="./assets/fokus.png">
             <div class="experience__info"
-                <h2 class="experience__title">Fokus</h2>
+                <h2 class="experience__title">AluraMidi</h2>
                 <h3 class="experience__text">Alura </h3>
                 <div class="experience__description">
                         <!-- Pon el enlace del proyecto en Github o GithubPages -->
                         <span class="experience__repo"><a href="https://sakatadshiro.github.io/fokus/"><button class="experiencia__boton_repo"><p>Ir al repositorio</p></button></a></span>
+                </div>    
+            
+            </div>  
+        </div>
+
+        <div class="experiencie__box">
+            <!-- Pon el logotipo/captura de pantalla de tu proyecto -->
+            <img class="experience__img" src="./assets/alurabank.png">
+            <div class="experience__info"
+                <h2 class="experience__title">AluraBank</h2>
+                <h3 class="experience__text">Alura </h3>
+                <div class="experience__description">
+                        <!-- Pon el enlace del proyecto en Github o GithubPages -->
+                        <span class="experience__repo"><a href="https://sakatadshiro.github.io/alurabank/"><button class="experiencia__boton_repo"><p>Ir al repositorio</p></button></a></span>
                 </div>    
             
             </div>  
