--- a/index.html
+++ b/index.html
@@ -83,53 +83,6 @@
         </div>
     </section>
 
-    <!-- Sección de Hobbies -->
-    <section class="hobbies" id="hobbies">
-        <h3 class="hobbies__title">Hobbies</h3>
-            <div class="hobbies__line">
-                <div class="hobbies__box">
-                    <ul>
-                        <li class="hobbies__img"><img src="assets\skate_icon.png"></li>
-                        <li class="hobbies__name"> Gym</li>
-                    </ul>
-                </div>
-
-                <div class="hobbies__box">
-                    <ul>
-                        <li class="hobbies__img"> <img src="assets\guitar_icon.png" alt=""></li>
-                        <li class="hobbies__name">Leer Manga</li>
-                    </ul>
-                </div>
-
-                <div class="hobbies__box">
-                    <ul>
-                        <li class="hobbies__img"> <img src="assets\headphones_icon.png" alt=""></li>
-                        <li class="hobbies__name">Oir música</li>
-                    </ul>
-                </div>
-
-                <div class="hobbies__box">
-                    <ul>
-                        <li class="hobbies__img"><img src="assets\tv_icon.png" alt=""></li>
-                        <li class="hobbies__name">Ver series y películas</li>
-                    </ul>
-                </div>
-
-                <div class="hobbies__box">
-                    <ul>
-                        <li class="hobbies__img"> <img src="assets\forkspoon_icon.png" alt=""> </li>
-                        <li class="hobbies__name">Jugar Videojuegos</li>
-                    </ul>
-                </div>
-
-                <div class="hobbies__box">
-                    <ul>
-                        <li class="hobbies__img"> <img src="assets\camera_icon.png" alt=""> </li>
-                        <li class="hobbies__name">Leer novelas</li>
-                    </ul>
-                </div>
-        </div>
-    </section>
 
         <!-- Sección de Formación académica -->
     <section class="academic" id="formacion">
@@ -174,7 +127,7 @@
                     <!-- Pon el logotipo de la institución de formación -->
                     <li class="academic__courses__item__img"><img class="academic_img" src="./assets/alura_logo_tr.png"></li>
                     <li class="academic__courses__item__title"><h4>Curso de HTML, CSS y Javascript</h4></li>
-                    <li class="academic__courses__item__subtitle"><p>En curso - Alura</p></li>
+                    <li class="academic__courses__item__subtitle"><p>2024 - Alura</p></li>
                 </ul>
             </div>
         </div>
@@ -245,6 +198,19 @@
                 <div class="experience__description">
                         <!-- Pon el enlace del proyecto en Github o GithubPages -->
                         <span class="experience__repo"><a href="https://sakatadshiro.github.io/alurabank/"><button class="experiencia__boton_repo"><p>Ir al repositorio</p></button></a></span>
+                </div>    
+            
+            </div>  
+        </div>
+        <div class="experiencie__box">
+            <!-- Pon el logotipo/captura de pantalla de tu proyecto -->
+            <img class="experience__img" src="./assets/alurageek.png">
+            <div class="experience__info"
+                <h2 class="experience__title">AluraGeek</h2>
+                <h3 class="experience__text">Alura </h3>
+                <div class="experience__description">
+                        <!-- Pon el enlace del proyecto en Github o GithubPages -->
+                        <span class="experience__repo"><a href="https://sakatadshiro.github.io/alurageek/"><button class="experiencia__boton_repo"><p>Ir al repositorio</p></button></a></span>
                 </div>    
             
             </div>  
