--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
             <!-- Pon el logotipo/captura de pantalla de tu proyecto -->
             <img class="experience__img" src="./assets/fokus.png">
             <div class="experience__info"
-                <h2 class="experience__title">AluraMidi</h2>
+                <h2 class="experience__title">Fokus</h2>
                 <h3 class="experience__text">Alura </h3>
                 <div class="experience__description">
                         <!-- Pon el enlace del proyecto en Github o GithubPages -->
