--- a/index.html
+++ b/index.html
@@ -212,7 +212,18 @@
                         <!-- Pon el enlace del proyecto en Github o GithubPages -->
                         <span class="experience__repo"><a href="https://sakatadshiro.github.io/alurageek/"><button class="experiencia__boton_repo"><p>Ir al repositorio</p></button></a></span>
                 </div>    
-            
+            </div>  
+        </div>
+        <div class="experiencie__box">
+            <!-- Pon el logotipo/captura de pantalla de tu proyecto -->
+            <img class="experience__img" src="./assets/org.png">
+            <div class="experience__info"
+                <h2 class="experience__title">Org</h2>
+                <h3 class="experience__text">Alura </h3>
+                <div class="experience__description">
+                        <!-- Pon el enlace del proyecto en Github o GithubPages -->
+                        <span class="experience__repo"><a href="https://org-eta-nine.vercel.app/"><button class="experiencia__boton_repo"><p>Ir al repositorio</p></button></a></span>
+                </div>    
             </div>  
         </div>
     </section>
