--- a/index.html
+++ b/index.html
@@ -80,6 +80,12 @@
                         <li class="skills__name">CSS</li>
                     </ul>
                 </div>
+                <div class="skills__box">
+                    <ul>
+                        <li class="skills__img"> <img src="assets\react_icon.png" alt=""> </li>
+                        <li class="skills__name">React</li>
+                    </ul>
+                </div>
         </div>
     </section>
 
@@ -134,8 +140,8 @@
     </section>
 
     <!-- Sección de Experiencia Profesional/Proyectos-->
+    <h2 class="experience__section__title" >Experiencia Profesional</h2>
     <section class="experience" id="xp">
-        <h2 class="experience__section__title" >Experiencia Profesional</h2>
         <div class="experiencie__box">
             <!-- Pon el logotipo/captura de pantalla de tu proyecto -->
             <img class="experience__img" src="./assets/adivina_juego.png">
