--- a/index.html
+++ b/index.html
@@ -157,19 +157,6 @@
 
         <div class="experiencie__box">
             <!-- Pon el logotipo/captura de pantalla de tu proyecto -->
-            <img class="experience__img" src="./assets/aluraplay.png">
-            <div class="experience__info"
-                <h2 class="experience__title">AluraPlay (Una página)</h2>
-                <h3 class="experience__text">Alura </h3>
-                <div class="experience__description">
-                        <!-- Pon el enlace del proyecto en Github o GithubPages -->
-                        <span class="experience__repo"><a href="https://sakatadshiro.github.io/aluraplay/#"><button class="experiencia__boton_repo"><p>Ir al repositorio</p></button></a></span>
-                </div>
-            </div>
-        </div>
-
-        <div class="experiencie__box">
-            <!-- Pon el logotipo/captura de pantalla de tu proyecto -->
             <img class="experience__img" src="./assets/aluramidi.png">
             <div class="experience__info"
                 <h2 class="experience__title">AluraMidi</h2>
@@ -241,6 +228,18 @@
                 <div class="experience__description">
                         <!-- Pon el enlace del proyecto en Github o GithubPages -->
                         <span class="experience__repo"><a href="https://space-qobovzcuw-arturo-fuentes-projects.vercel.app/"><button class="experiencia__boton_repo"><p>Ir al repositorio</p></button></a></span>
+                </div>    
+            </div>  
+        </div>
+        <div class="experiencie__box">
+            <!-- Pon el logotipo/captura de pantalla de tu proyecto -->
+            <img class="experience__img" src="./assets/alura-cinema.png">
+            <div class="experience__info"
+                <h2 class="experience__title">Alura-Cinema</h2>
+                <h3 class="experience__text">Alura </h3>
+                <div class="experience__description">
+                        <!-- Pon el enlace del proyecto en Github o GithubPages -->
+                        <span class="experience__repo"><a href="https://alura-cinema-lime.vercel.app/"><button class="experiencia__boton_repo"><p>Ir al repositorio</p></button></a></span>
                 </div>    
             </div>  
         </div>
